Implement Phase 1 BFT foundation infrastructure (partial)
Phase 1 delivers Byzantine fault tolerance infrastructure but requires
integration work before merge. This commit adds exception hierarchy,
metrics interface/implementations, and thread safety fixes.

Changes:
- Add sealed DhtException hierarchy with 4 subtypes for BFT error handling
- Implement KerlDhtMetrics interface (19 methods) with Micrometer + NoOp
- Fix virtual thread pinning in ThothByzantineStateProvider (CopyOnWriteArrayList)
- Wire ThothByzantineStateProvider into KerlDHT constructor
- Add getByzantineProvider() and getDhtMetrics() accessors
- Enhance KerlDHT.stop() with connection pool disposal and graceful shutdown

Known Issues (tracked in remediation beads):
- Provider instantiated but recordXxx methods never called (Delos-doec)
- Metrics interface complete but not used in operations (Delos-a157)
- Metrics implementation ignores operation parameter (Delos-gpx9)
- Byzantine test suite missing (Delos-5pcc)

Test Status:
- All 49 tests passing (29 existing + 20 new)
- Unit coverage good, integration coverage pending

Build: ./mvnw install -pl thoth -amd succeeds

References: Delos-shyh (Phase 1 foundation), audit reports in .pm/
Blocks: Phase 1 completion pending remediation beads